--- a/experiments.conf
+++ b/experiments.conf
@@ -63,9 +63,9 @@ best {
   train_path = train.english.jsonlines
   eval_path = dev.english.jsonlines
   conll_eval_path = dev.english.v4_gold_conll
-  lm_path = elmo_cache.hdf5
+  lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
-  eval_frequency = 5000
+  eval_frequency = 1000
   report_frequency = 100
   log_root = logs
   cluster = ${two_local_gpus}
