--- a/experiments.conf
+++ b/experiments.conf
@@ -23,10 +23,13 @@ two_local_gpus {
 
 # Main configuration.
 best {
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
   # Computation limits.
   max_top_antecedents = 50
-  max_training_sentences = 50
-  top_span_ratio = 0.8
+  max_training_sentences = 30
+  top_span_ratio = 0.4
 
   # Model hyperparameters.
   filter_widths = [3, 4, 5]
@@ -40,9 +43,9 @@ best {
   ffnn_size = 150
   ffnn_depth = 2
   feature_size = 20
-  max_span_width = 30
+  max_span_width = 10
   use_metadata = true
-  use_features = true
+  use_features = false
   model_heads = true
   coref_depth = 2
   lm_layers = 3
@@ -52,7 +55,7 @@ best {
   # Learning hyperparameters.
   max_gradient_norm = 5.0
   lstm_dropout_rate = 0.4
-  lexical_dropout_rate = 0.5
+  lexical_dropout_rate = 0.2
   dropout_rate = 0.2
   optimizer = adam
   learning_rate = 0.001
@@ -62,15 +65,26 @@ best {
   # Other.
   train_path = train.english.jsonlines
   eval_path = dev.english.jsonlines
-  conll_eval_path = dev.english.v4_gold_conll
+  # conll_eval_path = dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
   eval_frequency = 5000
   report_frequency = 100
-  log_root = logs
+  log_root = /checkpoint/mandarj/coref/logs
   cluster = ${two_local_gpus}
 }
 
+with_init = ${best} {
+  use_features = false
+  dropout_rate = 0.1
+  max_training_sentences = 30
+  eval_frequency = 1000
+  max_span_width = 30
+  num_epochs = 3
+  ffnn_depth = 2
+  top_span_ratio = 0.8
+  learning_rate = 5e-5
+}
 # For evaluation. Do not use for training (i.e. only for predict.py, evaluate.py, and demo.py). Rename `best` directory to `final`.
 final = ${best} {
   context_embeddings = ${glove_300d}
