fix ablations bug; change paths

--- a/experiments.conf
+++ b/experiments.conf
@@ -4,11 +4,11 @@ glove_300d {
   size = 300
 }
 glove_300d_filtered {
-  path = glove.840B.300d.txt.filtered
+  path = ../coref/glove.840B.300d.txt.filtered
   size = 300
 }
 glove_300d_2w {
-  path = glove_50_300_2.txt
+  path = ../coref/glove_50_300_2.txt
   size = 300
 }
 
@@ -32,7 +32,7 @@ best {
   filter_widths = [3, 4, 5]
   filter_size = 50
   char_embedding_size = 8
-  char_vocab_path = "char_vocab.english.txt"
+  char_vocab_path = "../coref/char_vocab.english.txt"
   context_embeddings = ${glove_300d_filtered}
   head_embeddings = ${glove_300d_2w}
   contextualization_size = 200
@@ -60,14 +60,14 @@ best {
   decay_frequency = 100
 
   # Other.
-  train_path = train.english.jsonlines
-  eval_path = dev.english.jsonlines
-  conll_eval_path = dev.english.v4_gold_conll
+  train_path = ../coref/data/coref/train.english.jsonlines
+  eval_path = ../coref/data/coref/dev.english.jsonlines
+  conll_eval_path = ../coref/data/coref/dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
-  eval_frequency = 5000
+  eval_frequency = 1000
   report_frequency = 100
-  log_root = logs
+  log_root = /checkpoint/mandarj/coref/logs
   cluster = ${two_local_gpus}
 }
 
@@ -80,6 +80,16 @@ final = ${best} {
   conll_eval_path = test.english.v4_gold_conll
 }
 
+elmo_men_span_emb = ${best} {
+  use_metadata = false
+  coref_depth = 1
+  use_features = false
+  #context_embeddings = ${glove_300d}
+  #head_embeddings = ${glove_300d_2w}
+  #lm_path = ""
+  #eval_path = test.english.jsonlines
+  #conll_eval_path = test.english.v4_gold_conll
+}
 # Baselines.
 c2f_100_ant = ${best} {
   max_top_antecedents = 100
