--- a/experiments.conf
+++ b/experiments.conf
@@ -68,21 +68,27 @@ best {
   # conll_eval_path = dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
-  eval_frequency = 5000
+  eval_frequency = 342
   report_frequency = 100
   log_root = /checkpoint/mandarj/coref/logs
   cluster = ${two_local_gpus}
 }
 
-with_init = ${best} {
-  use_features = false
-  dropout_rate = 0.1
+with_init_diff.fea.proj = ${best} {
+  max_num_speakers = 10
+  use_metadata = false
+  use_features = true
+  mean_word_pairs = false
+  dropout_rate = 0.3
+  lexical_dropout_rate = 0.0
   max_training_sentences = 30
   eval_frequency = 1000
   max_span_width = 30
-  num_epochs = 3
+  num_epochs = 20
   ffnn_depth = 2
   top_span_ratio = 0.8
+  bert_learning_rate = 1e-5
+  task_learning_rate = 5e-4
   learning_rate = 5e-5
 }
 # For evaluation. Do not use for training (i.e. only for predict.py, evaluate.py, and demo.py). Rename `best` directory to `final`.
