--- a/experiments.conf
+++ b/experiments.conf
@@ -60,9 +60,9 @@ best {
   decay_frequency = 100
 
   # Other.
-  train_path = ../coref/data/coref/train.english.jsonlines
-  eval_path = ../coref/data/coref/dev.english.jsonlines
-  conll_eval_path = ../coref/data/coref/dev.english.v4_gold_conll
+  train_path = ../coref/data/kenton/train.english.jsonlines
+  eval_path = ../coref/data/kenton/dev.english.jsonlines
+  conll_eval_path = ../coref/data/kenton/dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
   eval_frequency = 1000
@@ -80,10 +80,10 @@ final = ${best} {
   conll_eval_path = test.english.v4_gold_conll
 }
 
-elmo_men_span_emb = ${best} {
-  use_metadata = false
-  coref_depth = 1
-  use_features = false
+elmo_bilinear2 = ${best} {
+  #use_metadata = false
+  #coref_depth = 1
+  #use_features = false
   #context_embeddings = ${glove_300d}
   #head_embeddings = ${glove_300d_2w}
   #lm_path = ""
