--- a/experiments.conf
+++ b/experiments.conf
@@ -68,28 +68,98 @@ best {
   # conll_eval_path = dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
-  eval_frequency = 342
+  eval_frequency = 1000
   report_frequency = 100
   log_root = /checkpoint/mandarj/coref/logs
   cluster = ${two_local_gpus}
 }
 
-with_init_diff.fea.proj = ${best} {
+with_init_diff.fea.clip10 = ${best} {
   max_num_speakers = 10
   use_metadata = false
   use_features = true
   mean_word_pairs = false
+  use_head_attn = false
+  use_span_reps = false
   dropout_rate = 0.3
   lexical_dropout_rate = 0.0
+  mention_bilinear = true
+  max_training_sentences = 50
+  eval_frequency = 1000
+  max_span_width = 30
+  ffnn_size = 1000
+  num_epochs = 20
+  ffnn_depth = 1
+  top_span_ratio = 0.8
+  #bert_learning_rate = 5e-6
+  #task_learning_rate = 1e-4
+  bert_learning_rate = 1e-5
+  task_learning_rate = 2e-4
+  learning_rate = 1e-5
+}
+
+span_reps_trunc_dist = ${best} {
+  max_num_speakers = 10
+  use_metadata = true
+  use_features = true
+  dropout_rate = 0.3
+  lexical_dropout_rate = 0.0
+  max_training_sentences = 3
+  eval_frequency = 1000
+  max_span_width = 30
+  ffnn_size = 1000
+  num_epochs = 20
+  ffnn_depth = 1
+  top_span_ratio = 0.4
+  model_heads = false
+  #bert_learning_rate = 5e-6
+  #task_learning_rate = 1e-4
+  bert_learning_rate = 1e-5
+  task_learning_rate = 2e-4
+  learning_rate = 1e-5
+  fine_grained = false
+}
+
+full_nodist_priors = ${span_reps_trunc_dist} {
+  fine_grained = true
+  use_metadata = true
+  model_heads = true
+  use_features = false
+  use_prior = true
+}
+
+full.270.5 = ${span_reps_trunc_dist} {
+  single_example = true
+  top_span_ratio = 0.8
+  fine_grained = true
+  use_metadata = true
+  model_heads = true
+  use_features = true
+  use_prior = true
+  max_training_sentences = 5
+}
+with_init_diff.fea.50 = ${best} {
+  max_num_speakers = 10
+  use_metadata = false
+  use_features = true
+  mean_word_pairs = false
+  use_head_attn = true
+  use_span_reps = false
+  dropout_rate = 0.4
+  lexical_dropout_rate = 0.0
+  mention_bilinear = true
   max_training_sentences = 30
   eval_frequency = 1000
   max_span_width = 30
-  num_epochs = 20
-  ffnn_depth = 2
+  ffnn_size = 1000
+  num_epochs = 50
+  ffnn_depth = 1
   top_span_ratio = 0.8
+  #bert_learning_rate = 5e-6
+  #task_learning_rate = 1e-4
   bert_learning_rate = 1e-5
-  task_learning_rate = 5e-4
-  learning_rate = 5e-5
+  task_learning_rate = 2e-4
+  learning_rate = 1e-5
 }
 # For evaluation. Do not use for training (i.e. only for predict.py, evaluate.py, and demo.py). Rename `best` directory to `final`.
 final = ${best} {
