working all pairs

--- a/experiments.conf
+++ b/experiments.conf
@@ -74,29 +74,6 @@ best {
   cluster = ${two_local_gpus}
 }
 
-with_init_diff.fea.clip10 = ${best} {
-  max_num_speakers = 10
-  use_metadata = false
-  use_features = true
-  mean_word_pairs = false
-  use_head_attn = false
-  use_span_reps = false
-  dropout_rate = 0.3
-  lexical_dropout_rate = 0.0
-  mention_bilinear = true
-  max_training_sentences = 50
-  eval_frequency = 1000
-  max_span_width = 30
-  ffnn_size = 1000
-  num_epochs = 20
-  ffnn_depth = 1
-  top_span_ratio = 0.8
-  #bert_learning_rate = 5e-6
-  #task_learning_rate = 1e-4
-  bert_learning_rate = 1e-5
-  task_learning_rate = 2e-4
-  learning_rate = 1e-5
-}
 
 span_reps_trunc_dist = ${best} {
   max_num_speakers = 10
@@ -128,15 +105,19 @@ full_nodist_priors = ${span_reps_trunc_dist} {
   use_prior = true
 }
 
-full.270.5 = ${span_reps_trunc_dist} {
+seg.270.3.50.sd = ${span_reps_trunc_dist} {
   single_example = true
-  top_span_ratio = 0.8
+  top_span_ratio = 0.4
   fine_grained = true
+  coref_depth = 1
   use_metadata = true
   model_heads = true
   use_features = true
   use_prior = true
-  max_training_sentences = 5
+  max_training_sentences = 3
+  eval_frequency = 1000
+  max_top_antecedents = 30
+  use_segment_distance = true
 }
 with_init_diff.fea.50 = ${best} {
   max_num_speakers = 10
