adjacent seg indicator

--- a/experiments.conf
+++ b/experiments.conf
@@ -105,7 +105,7 @@ full_nodist_priors = ${span_reps_trunc_dist} {
   use_prior = true
 }
 
-seg.270.3.50.sd = ${span_reps_trunc_dist} {
+seg.270.3.50.sd.ssp = ${span_reps_trunc_dist} {
   single_example = true
   top_span_ratio = 0.4
   fine_grained = true
@@ -118,6 +118,8 @@ seg.270.3.50.sd = ${span_reps_trunc_dist} {
   eval_frequency = 1000
   max_top_antecedents = 30
   use_segment_distance = true
+  no_same_seg = true
+  ffnn_depth = 1
 }
 with_init_diff.fea.50 = ${best} {
   max_num_speakers = 10
