--- a/experiments.conf
+++ b/experiments.conf
@@ -105,7 +105,8 @@ full_nodist_priors = ${span_reps_trunc_dist} {
   use_prior = true
 }
 
-seg.270.3.50.sd.ssp = ${span_reps_trunc_dist} {
+seg.250 = ${span_reps_trunc_dist} {
+#seg.270.4 = ${span_reps_trunc_dist} {
   single_example = true
   top_span_ratio = 0.4
   fine_grained = true
