add segment dist; slurm ready

--- a/experiments.conf
+++ b/experiments.conf
@@ -118,14 +118,7 @@ span_reps_trunc_dist = ${best} {
   task_learning_rate = 2e-4
   learning_rate = 1e-5
   fine_grained = false
-}
-
-full_nodist_priors = ${span_reps_trunc_dist} {
-  fine_grained = true
-  use_metadata = true
-  model_heads = true
-  use_features = false
-  use_prior = true
+  use_segment_distance = false
 }
 
 full.270.5 = ${span_reps_trunc_dist} {
@@ -138,29 +131,18 @@ full.270.5 = ${span_reps_trunc_dist} {
   use_prior = true
   max_training_sentences = 5
 }
-with_init_diff.fea.50 = ${best} {
-  max_num_speakers = 10
-  use_metadata = false
-  use_features = true
-  mean_word_pairs = false
-  use_head_attn = true
-  use_span_reps = false
-  dropout_rate = 0.4
-  lexical_dropout_rate = 0.0
-  mention_bilinear = true
-  max_training_sentences = 30
-  eval_frequency = 1000
-  max_span_width = 30
-  ffnn_size = 1000
-  num_epochs = 50
-  ffnn_depth = 1
-  top_span_ratio = 0.8
-  #bert_learning_rate = 5e-6
-  #task_learning_rate = 1e-4
-  bert_learning_rate = 1e-5
-  task_learning_rate = 2e-4
-  learning_rate = 1e-5
+
+full.sd4 = ${full.270.5} {
+  use_segment_distance = true
+  max_training_sentences = 4
 }
+
+full.segsettings.30 = ${full.270.5} {
+  top_span_ratio = 0.8
+  max_training_sentences = 5
+  max_top_antecedents = 30
+}
+
 # For evaluation. Do not use for training (i.e. only for predict.py, evaluate.py, and demo.py). Rename `best` directory to `final`.
 final = ${best} {
   context_embeddings = ${glove_300d}
