higher order; actecedent-mention segments

--- a/experiments.conf
+++ b/experiments.conf
@@ -105,12 +105,12 @@ full_nodist_priors = ${span_reps_trunc_dist} {
   use_prior = true
 }
 
-seg.230 = ${span_reps_trunc_dist} {
+seg.250.ho4rev = ${span_reps_trunc_dist} {
 #seg.270.4 = ${span_reps_trunc_dist} {
   single_example = true
   top_span_ratio = 0.4
   fine_grained = true
-  coref_depth = 1
+  coref_depth = 2
   use_metadata = true
   model_heads = true
   use_features = true
@@ -121,6 +121,7 @@ seg.230 = ${span_reps_trunc_dist} {
   use_segment_distance = true
   no_same_seg = true
   ffnn_depth = 1
+  higher_order = true
 }
 with_init_diff.fea.50 = ${best} {
   max_num_speakers = 10
