--- a/experiments.conf
+++ b/experiments.conf
@@ -132,9 +132,9 @@ full.270.5 = ${span_reps_trunc_dist} {
   max_training_sentences = 5
 }
 
-full.sd4 = ${full.270.5} {
+full.230.sd5 = ${full.270.5} {
   use_segment_distance = true
-  max_training_sentences = 4
+  max_training_sentences = 5
 }
 
 full.segsettings.30 = ${full.270.5} {
