--- a/experiments.conf
+++ b/experiments.conf
@@ -64,7 +64,7 @@ best {
 
   # Other.
   train_path = train.english.jsonlines
-  eval_path = dev.english.jsonlines
+  eval_path = test.english.jsonlines
   # conll_eval_path = dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
@@ -105,7 +105,7 @@ full_nodist_priors = ${span_reps_trunc_dist} {
   use_prior = true
 }
 
-seg.250.ho4rev = ${span_reps_trunc_dist} {
+seg.230.ho4revcp2 = ${span_reps_trunc_dist} {
 #seg.270.4 = ${span_reps_trunc_dist} {
   single_example = true
   top_span_ratio = 0.4
@@ -122,6 +122,7 @@ seg.250.ho4rev = ${span_reps_trunc_dist} {
   no_same_seg = true
   ffnn_depth = 1
   higher_order = true
+  combine_passes = true
 }
 with_init_diff.fea.50 = ${best} {
   max_num_speakers = 10
