--- a/experiments.conf
+++ b/experiments.conf
@@ -64,7 +64,7 @@ best {
 
   # Other.
   train_path = train.english.jsonlines
-  eval_path = test.english.jsonlines
+  eval_path = dev.english.jsonlines
   # conll_eval_path = dev.english.v4_gold_conll
   lm_path = /checkpoint/mandarj/coref/elmo_cache.hdf5
   genres = ["bc", "bn", "mz", "nw", "pt", "tc", "wb"]
