--- a/experiments.conf
+++ b/experiments.conf
@@ -132,9 +132,18 @@ full.270.5 = ${span_reps_trunc_dist} {
   max_training_sentences = 5
 }
 
-full.230.sd5 = ${full.270.5} {
+full.230.sd5.cd2 = ${full.270.5} {
   use_segment_distance = true
-  max_training_sentences = 5
+  coref_depth = 2
+}
+
+full.230.sd5.drp2 = ${full.270.5} {
+  use_segment_distance = true
+  dropout_rate = 0.2
+}
+full.230.sd5.ffnn2k = ${full.270.5} {
+  use_segment_distance = true
+  ffnn_size = 2000
 }
 
 full.segsettings.30 = ${full.270.5} {
