para start tokens

--- a/experiments.conf
+++ b/experiments.conf
@@ -97,18 +97,11 @@ span_reps_trunc_dist = ${best} {
   fine_grained = false
 }
 
-full_nodist_priors = ${span_reps_trunc_dist} {
-  fine_grained = true
-  use_metadata = true
-  model_heads = true
-  use_features = false
-  use_prior = true
-}
 
-seg.230.ho4revcp2 = ${span_reps_trunc_dist} {
+seg.230.ho4revcp2.para3k = ${span_reps_trunc_dist} {
 #seg.270.4 = ${span_reps_trunc_dist} {
   single_example = true
-  top_span_ratio = 0.4
+  top_span_ratio = 0.35
   fine_grained = true
   coref_depth = 2
   use_metadata = true
@@ -123,29 +116,7 @@ seg.230.ho4revcp2 = ${span_reps_trunc_dist} {
   ffnn_depth = 1
   higher_order = true
   combine_passes = true
-}
-with_init_diff.fea.50 = ${best} {
-  max_num_speakers = 10
-  use_metadata = false
-  use_features = true
-  mean_word_pairs = false
-  use_head_attn = true
-  use_span_reps = false
-  dropout_rate = 0.4
-  lexical_dropout_rate = 0.0
-  mention_bilinear = true
-  max_training_sentences = 30
-  eval_frequency = 1000
-  max_span_width = 30
-  ffnn_size = 1000
-  num_epochs = 50
-  ffnn_depth = 1
-  top_span_ratio = 0.8
-  #bert_learning_rate = 5e-6
-  #task_learning_rate = 1e-4
-  bert_learning_rate = 1e-5
-  task_learning_rate = 2e-4
-  learning_rate = 1e-5
+  ffnn_size = 3000
 }
 # For evaluation. Do not use for training (i.e. only for predict.py, evaluate.py, and demo.py). Rename `best` directory to `final`.
 final = ${best} {
