fix seg dist bug

--- a/experiments.conf
+++ b/experiments.conf
@@ -132,7 +132,7 @@ full.270.5 = ${span_reps_trunc_dist} {
   max_training_sentences = 5
 }
 
-full.230.sd5.cd2 = ${full.270.5} {
+full.230.sd5cd2.1 = ${full.270.5} {
   use_segment_distance = true
   coref_depth = 2
 }
