post submission pre cleanup commit

--- a/experiments.conf
+++ b/experiments.conf
@@ -42,7 +42,113 @@ best {
   report_frequency = 100
   log_root = seg_len_logs
 }
+overlap_english_sl128_ff3000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 128
+  ffnn_size = 3000
+  train_path = data/overlap/train.english.128.jsonlines
+  eval_path = data/overlap/test.english.128.jsonlines
+  conll_eval_path = test.english.v4_gold_conll
+  max_training_sentences = 6
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
+english_sl450_ff1000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 450
+  ffnn_size = 1000
+  top_span_ratio = 0.8
+  train_path = data/seg_len_expts/train.english.450.jsonlines
+  eval_path = data/seg_len_expts/dev.english.450.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
+  max_training_sentences = 3
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
 
+english_sl500_ff1000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 500
+  ffnn_size = 1000
+  top_span_ratio = 0.8
+  train_path = data/seg_len_expts/train.english.500.jsonlines
+  eval_path = data/seg_len_expts/dev.english.500.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
+  max_training_sentences = 3
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
+
+overlap_english_sl256_ff3000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 256
+  ffnn_size = 3000
+  top_span_ratio = 0.4
+  train_path = data/overlap/train.english.256.jsonlines
+  eval_path = data/overlap/dev.english.256.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
+  max_training_sentences = 5
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
+
+overlap_english_sl384_ff1000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 384
+  ffnn_size = 1000
+  top_span_ratio = 0.4
+  train_path = data/overlap/train.english.384.jsonlines
+  eval_path = data/overlap/dev.english.384.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
+  max_training_sentences = 3
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
+overlap_english_sl512_ff1000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 512
+  top_span_ratio = 0.4
+  ffnn_size = 1000
+  train_path = data/overlap/train.english.512.jsonlines
+  eval_path = data/overlap/dev.english.512.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
+  max_training_sentences = 3
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
+
+overlap_english_sl512_ff1000_blr1e-05_tlr0.0002 = ${best} {
+  num_docs = 2802
+  bert_learning_rate = 1e-05
+  task_learning_rate = 0.0002
+  max_segment_len = 512
+  ffnn_size = 1000
+  train_path = data/overlap/train.english.512.jsonlines
+  eval_path = data/overlap/dev.english.512.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
+  max_training_sentences = 5
+  bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
+  vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
+  init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+}
 
 es_sl128_ff3000_blr1e-05_tlr0.0002 = ${best} {
   num_docs = 875
