--- a/experiments.conf
+++ b/experiments.conf
@@ -4,6 +4,7 @@ best {
   bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
   vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
   init_checkpoint = ../bert/cased_L-12_H-768_A-12/bert_model.ckpt
+  model_type = independent
   # Computation limits.
   max_top_antecedents = 50
   max_training_sentences = 5
@@ -49,8 +50,8 @@ overlap_english_sl128_ff3000_blr1e-05_tlr0.0002 = ${best} {
   max_segment_len = 128
   ffnn_size = 3000
   train_path = data/overlap/train.english.128.jsonlines
-  eval_path = data/overlap/test.english.128.jsonlines
-  conll_eval_path = test.english.v4_gold_conll
+  eval_path = data/overlap/dev.english.128.jsonlines
+  conll_eval_path = dev.english.v4_gold_conll
   max_training_sentences = 6
   bert_config_file = ../bert/cased_L-12_H-768_A-12/bert_config.json
   vocab_file = ../bert/cased_L-12_H-768_A-12/vocab.txt
